--- a/src/theme/SearchBar/styles.css
+++ b/src/theme/SearchBar/styles.css
@@ -314,7 +314,7 @@
   font-family: var(--ifm-font-family-base);
   color: #121315;
   padding-right: 0;
-  padding-left: 10px;
+  padding-left: 5px;
 }
 
 .DocSearch-Button-Placeholder {
